set sanitize-dump-payload to yes
Signed-off-by: Sandy <sandy@sandyuraz.com>

--- a/redis/redis.example.conf
+++ b/redis/redis.example.conf
@@ -10,6 +10,9 @@ tls-port 6379
 # sample user creation
 user user >pass on allcommands allkeys
 
+# this user is nopass, TLS-only, then
+user usernopass on nopass allcommands allkeys
+
 # disable the default user
 user default off
 
@@ -27,6 +30,7 @@ rdbchecksum yes
 
 # enable AOF (append operations)
 appendonly yes
+sanitize-dump-payload yes
 
 # allow clients to idle
 timeout 0
